# pybind-benchmarking

./: .gitignore  CMakeLists.txt  README.md  bench.py  main.py
src/: array_meta.hpp  nanobind_ext.cpp  numpy_includes.hpp  tester_common.cpp  tester_common.hpp
src/cpython/: CMakeLists.txt  cpython_ext.cpp  numpy_adapter.hpp
src/nanobind/: CMakeLists.txt  nanobind_adapter.hpp  nanobind_ext.cpp
src/pybind/: CMakeLists.txt  compile_time_strings.hpp  ndarray.cpp  ndarray.hpp  ndarray_adapter.hpp  pybind_ext.cpp
